# agentctx

./: .gitignore  PRD.md  README.md  lessons-learned.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  research-watch.yml
docs/: AGENTS.template.md  http-api.md  quickstart-python.md  quickstart-typescript.md
research/: metrics.jsonl  seen.json
scripts/: research_watch.py
server/: Dockerfile  client.ts  main.py
src/agentctx/: __init__.py  config.py  context_manager.py  exceptions.py  reporter.py  testing.py
src/agentctx/adapters/: __init__.py  base.py  claude.py  claude_cli.py  gemini.py
src/agentctx/memory/: __init__.py  observation_log.py  observer.py  reflector.py
src/agentctx/research/: __init__.py  evaluator.py  fetcher.py  updater.py
src/agentctx/security/: __init__.py  anchor.py  audit.py  sanitizer.py
src/agentctx/session/: __init__.py  context_builder.py  run_state.py
tests/: conftest.py  test_context_manager.py
tests/adapters/: test_adapters.py
tests/memory/: test_observation_log.py  test_observer.py  test_reflector.py
tests/research/: test_evaluator.py  test_fetcher.py  test_updater.py
tests/security/: test_audit.py  test_sanitizer.py  test_trust_tier_spotlight.py
tests/session/: test_context_builder.py  test_run_state.py
