[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentctx"
dynamic = ["version"]
description = "Multi-agent context and memory management library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
gemini = ["google-generativeai>=0.8.0"]
openai = ["openai>=1.50.0"]
research = ["feedparser>=6.0"]
server = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "feedparser>=6.0",
]

[tool.hatch.version]
path = "src/agentctx/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentctx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/agentctx --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src/agentctx"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
